# bardoz-journey

./: CMakeLists.txt  README.md  build.bat  main.cpp
include/: gameManager.h  var.h
src/: gameManager.cpp
